# marketing_ads_reports

./: docker-compose.yml  gsd-file-manifest.json  gsd-install-state.json
.clinerules/: gsd.md
agents/: gsd-advisor-researcher.md  gsd-ai-researcher.md  gsd-assumptions-analyzer.md  gsd-code-fixer.md  gsd-debug-session-manager.md  gsd-debugger.md  gsd-doc-classifier.md  gsd-doc-synthesizer.md  gsd-doc-writer.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-intel-updater.md  gsd-mempalace-curator.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-security-auditor.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
backend/: .env  .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/adapters/: __init__.py  base.py  facebook_adapter.py  google_adapter.py  tiktok_adapter.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routers/: __init__.py  campaigns.py  metrics.py
backend/app/api/schemas/: __init__.py  campaign_schema.py  metrics_schema.py
backend/app/domain/: __init__.py  models.py  normalizer.py
backend/app/etl/: __init__.py  celery_app.py  rate_limiter.py  tasks.py
backend/app/infra/: __init__.py  db.py  redis_client.py  settings.py
backend/app/repository/: __init__.py  fact_repo.py  raw_events_repo.py  staging_repo.py
database/: 001_extensions_and_schema.sql  002_dim_tables.sql  003_raw_and_staging_tables.sql  004_fact_table.sql  (+3 more)
(+122 files in other folders)
